@@ -10,25 +10,18 @@ s-gafizi.o
 ZIPSOURCES = \
 ${srcdir}/s-gafizi.ads ${srcdir}/s-gafizi.adb
 
-ZIPLIBOBJS = zlib/adler32.o zlib/compress.o zlib/crc32.o zlib/gzio.o \
-	zlib/uncompr.o zlib/deflate.o zlib/trees.o zlib/zutil.o \
-	zlib/inflate.o zlib/infblock.o zlib/inftrees.o \
-	zlib/infcodes.o zlib/infutil.o zlib/inffast.o
+ZIPLIBOBJS = adler32.o compress.o crc32.o gzio.o \
+	uncompr.o deflate.o trees.o zutil.o \
+	inflate.o infblock.o inftrees.o \
+	infcodes.o infutil.o inffast.o
 
-ZIPLIB = zlib/libz.a
+%.o: $(srcdir)/zlib/%.c
+	${LIBTOOL} --mode=compile \
+		$(CC) -c -O2 -I$(srcdir)/zlib $<
 
-$(ZIPLIB): $(ZIPLIBOBJS)
-	$(AR) rc $(ZIPLIB) $(ZIPLIBOBJS)
-
-zlib/%.o: $(srcdir)/zlib/%.c
-	$(CC) -c -O2 -I$(srcdir)/zlib -o $@ $<
-
-install-zip-libs: $(ZIPLIB)
-	${INSTALL} zlib/libz.a ${GARLIC}
-	${RANLIB} ${GARLIC}/libz.a
-
-ZIPINSTALL=install-zip-libs
-
-FILTERSOBJECTS += $(ZIPOBJECTS) $(ZIPLIB)
+FILTERSOBJECTS += $(ZIPOBJECTS) $(ZIPLIBOBJS)
 FILTERSSOURCES += $(ZIPSOURCES)
-FILTERINSTALL  += $(ZIPINSTALL)
+
+# Dependency
+
+Makefile.fil: Makefile.zip
